Add various header files
Add the system.h header file for all system header includes, and utils.c
and utils.h for various low-level utility functions.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,5 +27,11 @@
 # along with this program.  If not, see http://www.gnu.org/licenses/.
 
 
-bin_PROGRAMS = trader
-trader_SOURCES = trader.c trader.h globals.c globals.h
+bin_PROGRAMS	= trader
+
+trader_SOURCES	= \
+	trader.c	trader.h	\
+	globals.c	globals.h	\
+	utils.c		utils.h		\
+			system.h
+trader_LDADD	= @CURSES_LIB@
