--- a/configure.ac
+++ b/configure.ac
@@ -26,7 +26,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program.  If not, see http://www.gnu.org/licenses/.
 
 
-AC_INIT([Star Traders], [7.0], [J.Zaitseff@zap.org.au], , [http://www.zap.org.au/software/trader/])
+AC_INIT([Star Traders], [7.0], [J.Zaitseff@zap.org.au], [trader], [http://www.zap.org.au/software/trader/])
 
 AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
@@ -39,5 +39,6 @@ AC_CONFIG_FILES([
 	src/Makefile
 	lib/Makefile
 	doc/Makefile
+	m4/Makefile
 ])
 AC_OUTPUT
