--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -25,3 +25,5 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses/.
+
+dist_man6_MANS = trader.6
