--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -25,3 +25,6 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses/.
+
+
+EXTRA_DIST = ax_cflags_warn_all.m4
