Add the __attribute__((noreturn)) function specifier where possible

--- a/configure.ac
+++ b/configure.ac
@@ -38,6 +38,7 @@ AC_CONFIG_LIBOBJ_DIR([lib])
 AC_PROG_CC
 AC_PROG_CC_STDC
 AX_CFLAGS_WARN_ALL
+AX_C___ATTRIBUTE__
 
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
