--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -27,4 +27,6 @@
 # along with this program.  If not, see http://www.gnu.org/licenses/.
 
 
-EXTRA_DIST = ax_cflags_warn_all.m4
+EXTRA_DIST = \
+	ax_c___attribute__.m4 \
+	ax_cflags_warn_all.m4
