--- a/configure.ac
+++ b/configure.ac
@@ -40,6 +40,11 @@ AC_PROG_CC_STDC
 AX_CFLAGS_WARN_ALL
 AX_C___ATTRIBUTE__
 
+AX_WITH_CURSES
+AS_IF([test "x$ax_cv_curses" != "xyes"],
+	AC_MSG_ERROR([requires a SysV-compatible curses library.]),
+	AC_SUBST([CURSES_LIB]))
+
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
 	Makefile
