Add the basic I/O functions init_screen(), end_screen() and center()

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -32,6 +32,7 @@ bin_PROGRAMS	= trader
 trader_SOURCES	= \
 	trader.c	trader.h	\
 	globals.c	globals.h	\
+	intf.c		intf.h		\
 	utils.c		utils.h		\
 			system.h
 
