Move the stock exchange and bank functions (to be written) to exch.c

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -34,6 +34,7 @@ trader_SOURCES	= \
 	globals.c	globals.h	\
 	game.c		game.h		\
 	move.c		move.h		\
+	exch.c		exch.h		\
 	fileio.c	fileio.h	\
 	help.c		help.h		\
 	intf.c		intf.h		\
