Add files to m4/Makefile.am that should be distributed

--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -28,5 +28,7 @@
 
 
 EXTRA_DIST = \
-	ax_c___attribute__.m4 \
-	ax_cflags_warn_all.m4
+	ax_append_flag.m4	\
+	ax_cflags_warn_all.m4	\
+	ax_c___attribute__.m4	\
+	ax_with_curses.m4
