Add support for the Gnulib portability library
In particular, the gnulib-tool utility now maintains lib/Makefile.am, as
well as many files in the m4 and lib directories.  The file
m4/gnulib-cache.m4 allows the Gnulib files to be refreshed.  See
http://www.gnu.org/software/gnulib/.

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,15 @@ Makefile.in
 /configure
 /stamp-h1
 
+/build-aux/config.guess
+/build-aux/config.sub
 /build-aux/depcomp
 /build-aux/install-sh
 /build-aux/missing
+
+/build-aux/snippet/arg-nonnull.h
+/build-aux/snippet/c++defs.h
+/build-aux/snippet/warn-on-use.h
+/build-aux/snippet/_Noreturn.h
 
 /src/trader
