--- a/configure.ac
+++ b/configure.ac
@@ -37,13 +37,16 @@ AC_CONFIG_LIBOBJ_DIR([lib])
 
 AC_PROG_CC
 AC_PROG_CC_STDC
+gl_EARLY
+
 AX_CFLAGS_WARN_ALL
 AC_C_RESTRICT
 AC_C_VOLATILE
 AX_C___ATTRIBUTE__
-
 AC_TYPE_SIZE_T
 AC_TYPE_SSIZE_T
+
+gl_INIT
 
 AX_WITH_CURSES
 AS_IF([test "x$ax_cv_curses" != "xyes"],
