Add more files (generated by gnulib) to ignore by default

--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -69,3 +69,19 @@ vfprintf.c
 vsnprintf.c
 wchar.in.h
 xsize.h
+
+alloca.h
+arg-nonnull.h
+c++defs.h
+ctype.h
+getopt.h
+locale.h
+math.h
+stdio.h
+stdlib.h
+string.h
+sys
+time.h
+unistd.h
+warn-on-use.h
+wchar.h
