Move EXTRA_DIST to the main Makefile.am
Apparently Autoconf doesn't like EXTRA_DIST in build-aux/Makefile.am: it
just seems to ignore it.  Try adding EXTRA_DIST to the main Makefile.am
instead.

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,3 +32,6 @@ ACLOCAL_AMFLAGS = -I m4
 
 # Subdirectories to recurse into
 SUBDIRS = lib src doc m4
+
+# Additional files to distribute
+EXTRA_DIST = build-aux/bootstrap
