--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -2,6 +2,7 @@
 alloca.m4
 asm-underscore.m4
 assert.m4
+codeset.m4
 config-h.m4
 ctype.m4
 errno_h.m4
@@ -9,36 +10,56 @@ exponentd.m4
 exponentf.m4
 exponentl.m4
 extensions.m4
+fcntl-o.m4
 float_h.m4
 fpieee.m4
 fprintf-posix.m4
 frexp.m4
 frexpl.m4
 getopt.m4
+gettext.m4
 gettimeofday.m4
+glibc21.m4
+glibc2.m4
 gnulib-common.m4
 gnulib-comp.m4
 gnulib-tool.m4
+iconv.m4
 include_next.m4
+intdiv0.m4
+intldir.m4
+intl.m4
+intlmacosx.m4
+intmax.m4
 intmax_t.m4
+inttypes-pri.m4
 inttypes_h.m4
 isnand.m4
 isnanf.m4
 isnanl.m4
 largefile.m4
+lcmessage.m4
 ldexpl.m4
+lib-ld.m4
+lib-link.m4
+lib-prefix.m4
 locale_h.m4
+lock.m4
 longlong.m4
 malloc.m4
 math_h.m4
 memchr.m4
 mmap-anon.m4
 multiarch.m4
+nls.m4
 nocrash.m4
+po.m4
 printf.m4
 printf-frexp.m4
 printf-frexpl.m4
+printf-posix.m4
 printf-posix-rpl.m4
+progtest.m4
 signbit.m4
 size_max.m4
 snprintf.m4
@@ -57,10 +78,13 @@ strncat.m4
 strstr.m4
 sys_stat_h.m4
 sys_time_h.m4
+threadlib.m4
 time_h.m4
+uintmax_t.m4
 unistd_h.m4
 vasnprintf.m4
 vfprintf-posix.m4
+visibility.m4
 vsnprintf.m4
 vsnprintf-posix.m4
 warn-on-use.m4
