--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -8,9 +8,8 @@
 # Author: John Zaitseff <J.Zaitseff@zap.org.au>
 # $Id$
 #
-# This file, Makefile.am, contains the top-level Makefile for Star
-# Traders.  It needs to be processed by automake to produce the
-# corresponding Makefile.in.
+# This file, po/POTFILES.in, contains a list of source files which
+# contain translatable strings.
 #
 #
 # This program is free software: you can redistribute it and/or modify it
@@ -25,13 +24,3 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses/.
-
-
-# Find various M4 macro snippets
-ACLOCAL_AMFLAGS = -I m4
-
-# Subdirectories to recurse into
-SUBDIRS = lib src doc po m4
-
-# Additional files to distribute
-EXTRA_DIST = build-aux/bootstrap
