--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -41,8 +41,8 @@ trader_SOURCES	= \
 	utils.c		utils.h		\
 			system.h
 
-AM_CPPFLAGS	= -I$(top_builddir)/lib -I$(top_srcdir)/lib
-trader_LDADD	= @LIBINTL@ @CURSES_LIB@ $(top_builddir)/lib/libgnu.a
-DEFS		= -DLOCALEDIR=\"$(localedir)\" @DEFS@
+trader_CPPFLAGS	= -I$(top_builddir)/lib -I$(top_srcdir)/lib	\
+		  -DLOCALEDIR=\"$(localedir)\"
+trader_LDADD	= @CURSES_LIB@ $(top_builddir)/lib/libgnu.a @LIBINTL@
 
 EXTRA_DIST	= README
