Convert strings to UTF-8 if possible during file save and load

--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -2,6 +2,11 @@ Makefile.am
 alloca.in.h
 asnprintf.c
 ctype.in.h
+c-ctype.c
+c-ctype.h
+c-strcase.h
+c-strcasecmp.c
+c-strncasecmp.c
 dosname.h
 errno.in.h
 float.c
@@ -19,6 +24,15 @@ getopt1.c
 getopt_int.h
 gettext.h
 gettimeofday.c
+iconv.c
+iconv.in.h
+iconv_close.c
+iconv_open-aix.gperf
+iconv_open-hpux.gperf
+iconv_open-irix.gperf
+iconv_open-osf.gperf
+iconv_open-solaris.gperf
+iconv_open.c
 isnan.c
 isnand.c
 isnand-nolibm.h
@@ -26,6 +40,7 @@ isnanf.c
 isnanf-nolibm.h
 isnanl.c
 isnanl-nolibm.h
+langinfo.in.h
 locale.in.h
 malloc.c
 math.in.h
@@ -54,6 +69,8 @@ stdio.in.h
 stdio-impl.h
 stdlib.in.h
 strdup.c
+striconv.c
+striconv.h
 string.in.h
 strncat.c
 strstr.c
@@ -62,6 +79,8 @@ sys_stat.in.h
 sys_time.in.h
 time.in.h
 unistd.in.h
+unistr.in.h
+unitypes.in.h
 vasnprintf.c
 vasnprintf.h
 verify.h
@@ -75,6 +94,13 @@ arg-nonnull.h
 c++defs.h
 ctype.h
 getopt.h
+iconv.h
+iconv_open-aix.h
+iconv_open-hpux.h
+iconv_open-irix.h
+iconv_open-osf.h
+iconv_open-solaris.h
+langinfo.h
 locale.h
 math.h
 stdio.h
@@ -83,5 +109,13 @@ string.h
 sys
 time.h
 unistd.h
+unistr.h
+unitypes.h
+unused-parameter.h
 warn-on-use.h
 wchar.h
+
+unistr/.dirstamp
+unistr/u8-mbtoucr.c
+unistr/u8-uctomb-aux.c
+unistr/u8-uctomb.c
