--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ Makefile.in
 /configure
 /stamp-h1
 
+/build-aux/compile
 /build-aux/config.guess
 /build-aux/config.rpath
 /build-aux/config.sub
@@ -22,6 +23,7 @@ Makefile.in
 
 /build-aux/snippet/arg-nonnull.h
 /build-aux/snippet/c++defs.h
+/build-aux/snippet/unused-parameter.h
 /build-aux/snippet/warn-on-use.h
 /build-aux/snippet/_Noreturn.h
 
