--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -25,7 +25,10 @@ gnulib-common.m4
 gnulib-comp.m4
 gnulib-tool.m4
 iconv.m4
+iconv_h.m4
+iconv_open.m4
 include_next.m4
+inline.m4
 intdiv0.m4
 intldir.m4
 intl.m4
@@ -37,12 +40,14 @@ inttypes_h.m4
 isnand.m4
 isnanf.m4
 isnanl.m4
+langinfo_h.m4
 largefile.m4
 lcmessage.m4
 ldexpl.m4
 lib-ld.m4
 lib-link.m4
 lib-prefix.m4
+libunistring-base.m4
 locale_h.m4
 lock.m4
 longlong.m4
