Add a signal handler for SIGINT and SIGTERM
Add a signal handler for SIGINT and SIGTERM, as well as sprinklings of
checks to abort_game.  Although Ncurses DOES define handlers for SIGINT
and SIGTERM, they do not always seem to work correctly under many
operating systems.

--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -1,17 +1,17 @@
 Makefile.am
 alloca.in.h
 asnprintf.c
-ctype.in.h
 c-ctype.c
 c-ctype.h
 c-strcase.h
 c-strcasecmp.c
 c-strncasecmp.c
+ctype.in.h
 dosname.h
 errno.in.h
+float+.h
 float.c
 float.in.h
-float+.h
 fprintf.c
 fpucw.h
 frexp.c
@@ -34,19 +34,18 @@ iconv_open-osf.gperf
 iconv_open-solaris.gperf
 iconv_open.c
 isnan.c
-isnand.c
 isnand-nolibm.h
-isnanf.c
+isnand.c
 isnanf-nolibm.h
-isnanl.c
+isnanf.c
 isnanl-nolibm.h
+isnanl.c
 langinfo.in.h
 locale.in.h
 malloc.c
 math.in.h
 memchr.c
 memchr.valgrind
-printf.c
 printf-args.c
 printf-args.h
 printf-frexp.c
@@ -55,9 +54,14 @@ printf-frexpl.c
 printf-frexpl.h
 printf-parse.c
 printf-parse.h
+printf.c
+sig-handler.h
+sigaction.c
+signal.in.h
 signbitd.c
 signbitf.c
 signbitl.c
+sigprocmask.c
 size_max.h
 snprintf.c
 stat.c
@@ -65,16 +69,16 @@ stdarg.in.h
 stdbool.in.h
 stddef.in.h
 stdint.in.h
-stdio.in.h
 stdio-impl.h
+stdio.in.h
 stdlib.in.h
+str-two-way.h
 strdup.c
 striconv.c
 striconv.h
 string.in.h
 strncat.c
 strstr.c
-str-two-way.h
 sys_stat.in.h
 sys_time.in.h
 time.in.h
@@ -103,6 +107,7 @@ iconv_open-solaris.h
 langinfo.h
 locale.h
 math.h
+signal.h
 stdio.h
 stdlib.h
 string.h
