--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -19,8 +19,8 @@ frexpl.m4
 getopt.m4
 gettext.m4
 gettimeofday.m4
-glibc21.m4
 glibc2.m4
+glibc21.m4
 gnulib-common.m4
 gnulib-comp.m4
 gnulib-tool.m4
@@ -30,8 +30,8 @@ iconv_open.m4
 include_next.m4
 inline.m4
 intdiv0.m4
-intldir.m4
 intl.m4
+intldir.m4
 intlmacosx.m4
 intmax.m4
 intmax_t.m4
@@ -59,16 +59,19 @@ multiarch.m4
 nls.m4
 nocrash.m4
 po.m4
-printf.m4
 printf-frexp.m4
 printf-frexpl.m4
-printf-posix.m4
 printf-posix-rpl.m4
+printf-posix.m4
+printf.m4
 progtest.m4
+sigaction.m4
+signal_h.m4
+signalblocking.m4
 signbit.m4
 size_max.m4
-snprintf.m4
 snprintf-posix.m4
+snprintf.m4
 stat.m4
 stdarg.m4
 stdbool.m4
@@ -90,8 +93,8 @@ unistd_h.m4
 vasnprintf.m4
 vfprintf-posix.m4
 visibility.m4
-vsnprintf.m4
 vsnprintf-posix.m4
+vsnprintf.m4
 warn-on-use.m4
 wchar_h.m4
 wchar_t.m4
