--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -4,6 +4,7 @@ asm-underscore.m4
 assert.m4
 codeset.m4
 config-h.m4
+configmake.m4
 ctype.m4
 errno_h.m4
 exponentd.m4
@@ -48,11 +49,19 @@ lib-ld.m4
 lib-link.m4
 lib-prefix.m4
 libunistring-base.m4
+localcharset.m4
+locale-fr.m4
+locale-ja.m4
+locale-zh.m4
 locale_h.m4
 lock.m4
 longlong.m4
 malloc.m4
 math_h.m4
+mbrtowc.m4
+mbsinit.m4
+mbsrtowcs.m4
+mbstate_t.m4
 memchr.m4
 mmap-anon.m4
 multiarch.m4
@@ -98,6 +107,8 @@ vsnprintf.m4
 warn-on-use.m4
 wchar_h.m4
 wchar_t.m4
+wcrtomb.m4
+wcsrtombs.m4
 wctype_h.m4
 wint_t.m4
 xsize.m4
