--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -110,8 +110,10 @@ warn-on-use.m4
 wchar_h.m4
 wchar_t.m4
 wcrtomb.m4
+wcsdup.m4
 wcsrtombs.m4
 wctype_h.m4
 wcwidth.m4
 wint_t.m4
+wmemcpy.m4
 xsize.m4
