--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.o
 *.a
+*.gmo
 .deps/
 Makefile
 Makefile.in
@@ -29,7 +30,6 @@ TAGS
 /build-aux/snippet/warn-on-use.h
 
 /po/POTFILES
-/po/en@quot.gmo
 /po/en@quot.insert-header
 /po/en@quot.po
 /po/messages.mo
