--- a/configure.ac
+++ b/configure.ac
@@ -59,6 +59,14 @@ AX_WITH_CURSES
 AS_IF([test "x$ax_cv_curses" != xyes || test "x$ax_cv_curses_color" != xyes], [
 	AC_MSG_ERROR([requires an X/Open-compatible Curses library with colour])
 ])
+AS_IF([test "x$ax_cv_curses_enhanced" != xyes], [
+	AC_MSG_WARN([no X/Open-compatible Enhanced Curses library found
+
+*****************    Locales with multibyte character sequences (such as
+***  WARNING  ***    UTF-8) require a wide-character version of Curses,
+*****************    such as NcursesW, to work correctly.
+])
+])
 
 AC_CONFIG_FILES([
 	Makefile
