--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -48,6 +48,7 @@ mmap-anon.m4
 multiarch.m4
 nls.m4
 nocrash.m4
+off_t.m4
 po.m4
 printf-posix.m4
 progtest.m4
@@ -64,6 +65,7 @@ strstr.m4
 sys_socket_h.m4
 sys_stat_h.m4
 sys_time_h.m4
+sys_types_h.m4
 threadlib.m4
 time_h.m4
 uintmax_t.m4
