Add a data directory for non-code data

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -8,9 +8,9 @@
 # Author: John Zaitseff <J.Zaitseff@zap.org.au>
 # $Id$
 #
-# This file, Makefile.am, contains the top-level Makefile for Star
-# Traders.  It needs to be processed by automake to produce the
-# corresponding Makefile.in.
+# This file, data/Makefile.am, contains the non-code data directory
+# Makefile for Star Traders.  It needs to be processed by automake to
+# produce the corresponding Makefile.in.
 #
 #
 # This program is free software: you can redistribute it and/or modify it
@@ -26,12 +26,4 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses/.
 
-
-# Find various M4 macro snippets
-ACLOCAL_AMFLAGS = -I m4
-
-# Subdirectories to recurse into
-SUBDIRS = lib src data doc po m4
-
-# Additional files to distribute
-EXTRA_DIST = build-aux/bootstrap
+EXTRA_DIST     = README
