--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -1,107 +1,109 @@
 Makefile.am
-btowc.c
-c-ctype.c
-c-ctype.h
-c-strcase.h
-c-strcasecmp.c
-c-strncasecmp.c
-config.charset
-crc.c
-crc.h
-getopt.c
-getopt.in.h
-getopt1.c
-getopt_int.h
-gettext.h
-gettimeofday.c
-hard-locale.c
-hard-locale.h
-iconv.c
-iconv.in.h
-iconv_close.c
-iconv_open-aix.gperf
-iconv_open-hpux.gperf
-iconv_open-irix.gperf
-iconv_open-osf.gperf
-iconv_open-solaris.gperf
-iconv_open.c
-localcharset.c
-localcharset.h
-locale.in.h
-mbrtowc.c
-mbsinit.c
-mbsrtowcs-impl.h
-mbsrtowcs-state.c
-mbsrtowcs.c
-mbtowc-impl.h
-mbtowc.c
-memchr.c
-memchr.valgrind
-ref-add.sin
-ref-del.sin
-stdbool.in.h
-stddef.h
-stddef.in.h
-stdint.in.h
-stdio.in.h
-stdlib.in.h
-str-two-way.h
-streq.h
-striconv.c
-striconv.h
-string.in.h
-strnlen1.c
-strnlen1.h
-strstr.c
-sys_stat.in.h
-sys_time.in.h
-sys_types.in.h
-time.in.h
-unistd.c
-unistd.in.h
-unistr.in.h
-unitypes.in.h
-verify.h
-wchar.in.h
-wcrtomb.c
-wcsdup-impl.h
-wcsdup.c
-wctob.c
-wctomb-impl.h
-wctomb.c
-wctype-h.c
-wctype.in.h
-wmemcpy-impl.h
-wmemcpy.c
 
-arg-nonnull.h
-c++defs.h
-charset.alias
-configmake.h
-getopt.h
-iconv.h
-iconv_open-aix.h
-iconv_open-hpux.h
-iconv_open-irix.h
-iconv_open-osf.h
-iconv_open-solaris.h
-locale.h
-ref-add.sed
-ref-del.sed
-stdio.h
-stdlib.h
-string.h
-sys/
-time.h
-unistd.h
-unistr.h
-unitypes.h
-unused-parameter.h
-warn-on-use.h
-wchar.h
-wctype.h
+/btowc.c
+/c-ctype.c
+/c-ctype.h
+/c-strcase.h
+/c-strcasecmp.c
+/c-strncasecmp.c
+/config.charset
+/crc.c
+/crc.h
+/getopt.c
+/getopt.in.h
+/getopt1.c
+/getopt_int.h
+/gettext.h
+/gettimeofday.c
+/hard-locale.c
+/hard-locale.h
+/iconv.c
+/iconv.in.h
+/iconv_close.c
+/iconv_open-aix.gperf
+/iconv_open-hpux.gperf
+/iconv_open-irix.gperf
+/iconv_open-osf.gperf
+/iconv_open-solaris.gperf
+/iconv_open.c
+/localcharset.c
+/localcharset.h
+/locale.in.h
+/mbrtowc.c
+/mbsinit.c
+/mbsrtowcs-impl.h
+/mbsrtowcs-state.c
+/mbsrtowcs.c
+/mbtowc-impl.h
+/mbtowc.c
+/memchr.c
+/memchr.valgrind
+/ref-add.sin
+/ref-del.sin
+/stdbool.in.h
+/stddef.in.h
+/stdint.in.h
+/stdio.in.h
+/stdlib.in.h
+/str-two-way.h
+/streq.h
+/striconv.c
+/striconv.h
+/string.in.h
+/strnlen1.c
+/strnlen1.h
+/strstr.c
+/sys_stat.in.h
+/sys_time.in.h
+/sys_types.in.h
+/time.in.h
+/unistd.c
+/unistd.in.h
+/unistr.in.h
+/unitypes.in.h
+/verify.h
+/wchar.in.h
+/wcrtomb.c
+/wcsdup-impl.h
+/wcsdup.c
+/wctob.c
+/wctomb-impl.h
+/wctomb.c
+/wctype-h.c
+/wctype.in.h
+/wmemcpy-impl.h
+/wmemcpy.c
 
-unistr/.dirstamp
-unistr/u8-mbtoucr.c
-unistr/u8-uctomb-aux.c
-unistr/u8-uctomb.c
+/arg-nonnull.h
+/c++defs.h
+/charset.alias
+/configmake.h
+/getopt.h
+/iconv.h
+/iconv_open-aix.h
+/iconv_open-hpux.h
+/iconv_open-irix.h
+/iconv_open-osf.h
+/iconv_open-solaris.h
+/locale.h
+/ref-add.sed
+/ref-del.sed
+/stddef.h
+/stdio.h
+/stdlib.h
+/string.h
+/time.h
+/unistd.h
+/unistr.h
+/unitypes.h
+/unused-parameter.h
+/warn-on-use.h
+/wchar.h
+/wctype.h
+
+/sys/
+
+/unistr/.dirstamp
+/unistr/u8-mbtoucr.c
+/unistr/u8-uctomb-aux.c
+/unistr/u8-uctomb.c
