--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -1,87 +1,87 @@
-00gnulib.m4
-absolute-header.m4
-assert.m4
-btowc.m4
-codeset.m4
-config-h.m4
-configmake.m4
-extensions.m4
-extern-inline.m4
-fcntl-o.m4
-getopt.m4
-gettext.m4
-gettimeofday.m4
-glibc2.m4
-glibc21.m4
-gnulib-common.m4
-gnulib-comp.m4
-gnulib-tool.m4
-hard-locale.m4
-iconv.m4
-iconv_h.m4
-iconv_open.m4
-include_next.m4
-inline.m4
-intdiv0.m4
-intl.m4
-intldir.m4
-intlmacosx.m4
-intmax.m4
-inttypes-pri.m4
-inttypes_h.m4
-lcmessage.m4
-lib-ld.m4
-lib-link.m4
-lib-prefix.m4
-libunistring-base.m4
-localcharset.m4
-locale-fr.m4
-locale-ja.m4
-locale-zh.m4
-locale_h.m4
-lock.m4
-longlong.m4
-mbrtowc.m4
-mbsinit.m4
-mbsrtowcs.m4
-mbstate_t.m4
-mbtowc.m4
-memchr.m4
-mmap-anon.m4
-multiarch.m4
-nls.m4
-nocrash.m4
-off_t.m4
-po.m4
-printf-posix.m4
-progtest.m4
-size_max.m4
-ssize_t.m4
-stdbool.m4
-stddef_h.m4
-stdint.m4
-stdint_h.m4
-stdio_h.m4
-stdlib_h.m4
-string_h.m4
-strstr.m4
-sys_socket_h.m4
-sys_stat_h.m4
-sys_time_h.m4
-sys_types_h.m4
-threadlib.m4
-time_h.m4
-uintmax_t.m4
-unistd_h.m4
-visibility.m4
-warn-on-use.m4
-wchar_h.m4
-wchar_t.m4
-wcrtomb.m4
-wcsdup.m4
-wctob.m4
-wctomb.m4
-wctype_h.m4
-wint_t.m4
-wmemcpy.m4
-xsize.m4
+/00gnulib.m4
+/absolute-header.m4
+/assert.m4
+/btowc.m4
+/codeset.m4
+/config-h.m4
+/configmake.m4
+/extensions.m4
+/extern-inline.m4
+/fcntl-o.m4
+/getopt.m4
+/gettext.m4
+/gettimeofday.m4
+/glibc2.m4
+/glibc21.m4
+/gnulib-common.m4
+/gnulib-comp.m4
+/gnulib-tool.m4
+/hard-locale.m4
+/iconv.m4
+/iconv_h.m4
+/iconv_open.m4
+/include_next.m4
+/inline.m4
+/intdiv0.m4
+/intl.m4
+/intldir.m4
+/intlmacosx.m4
+/intmax.m4
+/inttypes-pri.m4
+/inttypes_h.m4
+/lcmessage.m4
+/lib-ld.m4
+/lib-link.m4
+/lib-prefix.m4
+/libunistring-base.m4
+/localcharset.m4
+/locale-fr.m4
+/locale-ja.m4
+/locale-zh.m4
+/locale_h.m4
+/lock.m4
+/longlong.m4
+/mbrtowc.m4
+/mbsinit.m4
+/mbsrtowcs.m4
+/mbstate_t.m4
+/mbtowc.m4
+/memchr.m4
+/mmap-anon.m4
+/multiarch.m4
+/nls.m4
+/nocrash.m4
+/off_t.m4
+/po.m4
+/printf-posix.m4
+/progtest.m4
+/size_max.m4
+/ssize_t.m4
+/stdbool.m4
+/stddef_h.m4
+/stdint.m4
+/stdint_h.m4
+/stdio_h.m4
+/stdlib_h.m4
+/string_h.m4
+/strstr.m4
+/sys_socket_h.m4
+/sys_stat_h.m4
+/sys_time_h.m4
+/sys_types_h.m4
+/threadlib.m4
+/time_h.m4
+/uintmax_t.m4
+/unistd_h.m4
+/visibility.m4
+/warn-on-use.m4
+/wchar_h.m4
+/wchar_t.m4
+/wcrtomb.m4
+/wcsdup.m4
+/wctob.m4
+/wctomb.m4
+/wctype_h.m4
+/wint_t.m4
+/wmemcpy.m4
+/xsize.m4
