--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -26,6 +26,7 @@ Makefile.am
 /iconv_open-osf.gperf
 /iconv_open-solaris.gperf
 /iconv_open.c
+/limits.in.h
 /localcharset.c
 /localcharset.h
 /locale.in.h
@@ -103,6 +104,7 @@ Makefile.am
 
 /sys/
 
+/unistr/
 /unistr/.dirstamp
 /unistr/u8-mbtoucr.c
 /unistr/u8-uctomb-aux.c
