Update ax_with_curses.m4 to latest version from the GNU Autoconf archive
This version changes CURSES_LIB to the plural CURSES_LIBS, and adds the
CURSES_CFLAGS variable.  It also uses pkg-config(1) if that is available.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -42,7 +42,7 @@ trader_SOURCES	= \
 			system.h
 
 trader_CPPFLAGS	= -I$(top_builddir)/lib -I$(top_srcdir)/lib	\
-		  -DLOCALEDIR=\"$(localedir)\"
-trader_LDADD	= @CURSES_LIB@ $(top_builddir)/lib/libgnu.a @LIBICONV@ @LIBINTL@
+		  @CURSES_CFLAGS@ -DLOCALEDIR=\"$(localedir)\"
+trader_LDADD	= @CURSES_LIBS@ $(top_builddir)/lib/libgnu.a @LIBICONV@ @LIBINTL@
 
 EXTRA_DIST	= README
