--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -2,6 +2,7 @@
 /absolute-header.m4
 /assert.m4
 /btowc.m4
+/builtin-expect.m4
 /codeset.m4
 /config-h.m4
 /configmake.m4
@@ -40,6 +41,7 @@
 /locale-ja.m4
 /locale-zh.m4
 /locale_h.m4
+/localtime-buffer.m4
 /lock.m4
 /longlong.m4
 /mbrtowc.m4
