Generate trader.desktop and install it in the correct location

--- a/configure.ac
+++ b/configure.ac
@@ -69,6 +69,8 @@ AS_IF([test "x$ax_cv_curses_enhanced" != xyes], [
 ])
 ])
 
+AC_SUBST([desktopdir],['${datadir}/applications'])
+
 AC_CONFIG_FILES([
 	Makefile
 	lib/Makefile
