Use a helper msgfmt-desktop script instead of invoking msgfmt(1) directly

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,10 @@
-Makefile.am		ident
-/configure.ac		ident
-/build-aux/bootstrap	ident
-/doc/trader.*		ident
-/po/LINGUAS		ident
-/po/Makevars		ident
-/po/POTFILES.in		ident
-/src/*.c		ident
-/src/*.h		ident
+Makefile.am			ident
+/configure.ac			ident
+/build-aux/bootstrap		ident
+/build-aux/msgfmt-desktop	ident
+/doc/trader.*			ident
+/po/LINGUAS			ident
+/po/Makevars			ident
+/po/POTFILES.in			ident
+/src/*.c			ident
+/src/*.h			ident
