--- a/Makefile.am
+++ b/Makefile.am
@@ -31,4 +31,6 @@
 SUBDIRS = lib src po data doc m4
 
 # Additional files to distribute
-EXTRA_DIST = build-aux/bootstrap
+EXTRA_DIST = \
+	build-aux/bootstrap		\
+	build-aux/msgfmt-desktop
