Add comments to trader.desktop.in

--- a/data/trader.desktop.in
+++ b/data/trader.desktop.in
@@ -1,7 +1,32 @@
+#########################################################################
+#                                                                       #
+#             Star Traders: A Game of Interstellar Trading              #
+#                Copyright (C) 1990-2017, John Zaitseff                 #
+#                                                                       #
+#########################################################################
+
+# Author: John Zaitseff <J.Zaitseff@zap.org.au>
+# $Id$
+
+# This file provides a translated desktop entry for Star Traders and
+# conforms to the Desktop Entry Specification v1.1.  This file is
+# distributed under the same licence as Star Traders itself: the GNU
+# General Public License, version 3 or later.
+
 [Desktop Entry]
+# TRANSLATORS: The name of the game.  You may choose to translate it into
+# your own language (recommended) or keep it the same as the English
+# version.  Feel free to look through other translations to see how
+# others have done this.
 Name=Star Traders
 Comment=Play Star Traders, a simple game of interstellar trading
+# TRANSLATORS: A list of keywords describing Star Traders.  By all means
+# add your own keywords!
 Keywords=game;interstellar;trading;strategy;
+# TRANSLATORS: This string is the name of the icon to use.  The Desktop
+# Entry Specification states it is translatable, but unless you provide a
+# matching icon, please leave it as "trader": this will use trader.svg
+# and the various trader.png files in the data source code directory.
 Icon=trader
 Exec=trader
 TryExec=trader
