Make the licence text be its own paragraph in trader.desktop.in

--- a/data/trader.desktop.in
+++ b/data/trader.desktop.in
@@ -9,9 +9,10 @@
 # $Id$
 
 # This file provides a translated desktop entry for Star Traders and
-# conforms to the Desktop Entry Specification v1.1.  This file is
-# distributed under the same licence as Star Traders itself: the GNU
-# General Public License, version 3 or later.
+# conforms to the Desktop Entry Specification v1.1.
+#
+# This file is distributed under the same licence as Star Traders itself:
+# the GNU General Public License, version 3 or later.
 
 [Desktop Entry]
 # TRANSLATORS: The name of the game.  You may choose to translate it into
