--- a/Makefile.am
+++ b/Makefile.am
@@ -33,4 +33,5 @@ SUBDIRS = lib src po data doc m4
 # Additional files to distribute
 EXTRA_DIST = \
 	build-aux/bootstrap		\
-	build-aux/msgfmt-desktop
+	build-aux/msgfmt-desktop	\
+	lib/obsolete-strings.c
