Add the Gnulib monetary module to check for the existence of <monetary.h>

--- a/configure.ac
+++ b/configure.ac
@@ -58,6 +58,10 @@ AM_GNU_GETTEXT_VERSION([0.19.8])
 
 gl_INIT
 
+AS_IF([test "x$ac_cv_header_monetary_h" != xyes], [
+	AC_MSG_ERROR([requires <monetary.h> to exist in the C library])
+])
+
 AX_WITH_CURSES
 AS_IF([test "x$ax_cv_curses" != xyes || test "x$ax_cv_curses_color" != xyes], [
 	AC_MSG_ERROR([requires an X/Open-compatible Curses library with colour])
