Move redefinition of _XOPEN_SOURCE into its own Autoconf macro and header
This makes the main source code look a little cleaner, at the expense of
background magic happening in the configure-generated config.h.  But this
magic was already happening for _GNU_SOURCE, __EXTENSIONS__ and the like.

The only wrinkle is that newer versions of NcursesW cause ./configure to
include "-D_XOPEN_SOURCE=600" as part of the compilation command line--on
systems that support _XOPEN_SOURCE=700.  The AC_DEFINE/AC_DEFINE_UNQUOTED
macros automatically comment out any "#undef" lines in config.h, so the
file lib/xopen_source.h works around this limitation.  It is
automatically included by config.h.

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,8 @@ Makefile.am			ident
 /data/trader.svg		ident
 /doc/trader.*			ident
 /lib/obsolete-strings.c		ident
+/lib/xopen_source.h		ident
+/m4/xopen_source.m4		ident
 /po/LINGUAS			ident
 /po/Makevars			ident
 /po/POTFILES.in			ident
