--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -35,4 +35,5 @@ EXTRA_DIST = \
 	ax_prepend_flag.m4	\
 	ax_require_defined.m4	\
 	ax_with_curses.m4	\
-	gnulib-cache.m4
+	gnulib-cache.m4		\
+	xopen_source.m4
