Use a hyphen instead of underscore for xopen-source.m4 and xopen-source.h

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,4 +35,4 @@ EXTRA_DIST = \
 	build-aux/bootstrap		\
 	build-aux/msgfmt-desktop	\
 	lib/obsolete-strings.c		\
-	lib/xopen_source.h
+	lib/xopen-source.h
