--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -81,6 +81,15 @@ Makefile.am
 /wctomb.c
 /wctype-h.c
 /wctype.in.h
+/windows-initguard.h
+/windows-mutex.c
+/windows-mutex.h
+/windows-once.c
+/windows-once.h
+/windows-recmutex.c
+/windows-recmutex.h
+/windows-rwlock.c
+/windows-rwlock.h
 /wmemcpy-impl.h
 /wmemcpy.c
 
@@ -115,9 +124,3 @@ Makefile.am
 /wctype.h
 
 /sys/
-
-/unistr/
-/unistr/.dirstamp
-/unistr/u8-mbtoucr.c
-/unistr/u8-uctomb-aux.c
-/unistr/u8-uctomb.c
