Update ignored files for the latest version of Gnulib

--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -33,18 +33,25 @@ Makefile.am
 /iconv_open-solaris.gperf
 /iconv_open-zos.gperf
 /iconv_open.c
+/inttypes.in.h
+/lc-charset-dispatch.c
+/lc-charset-dispatch.h
 /limits.in.h
 /localcharset.c
 /localcharset.h
 /locale.in.h
 /localtime-buffer.c
 /localtime-buffer.h
+/mbrtowc-impl-utf8.h
+/mbrtowc-impl.h
 /mbrtowc.c
 /mbsinit.c
 /mbsrtowcs-impl.h
 /mbsrtowcs-state.c
 /mbsrtowcs.c
 /mbtowc-impl.h
+/mbtowc-lock.c
+/mbtowc-lock.h
 /mbtowc.c
 /memchr.c
 /memchr.valgrind
@@ -109,6 +116,7 @@ Makefile.am
 /iconv_open-osf.h
 /iconv_open-solaris.h
 /iconv_open-zos.h
+/inttypes.h
 /limits.h
 /locale.h
 /monetary.h
