--- a/configure.ac
+++ b/configure.ac
@@ -82,6 +82,7 @@ AS_IF([test "x$ax_cv_curses_enhanced" = xyes], [],
 ])
 
 AC_SUBST([desktopdir],['${datadir}/applications'])
+AC_SUBST([appdatadir],['${datadir}/metainfo'])
 AC_SUBST([iconsdir],['${datadir}/icons/hicolor'])
 
 AC_CONFIG_FILES([
